Últimos ajustes para publicar

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <!-- Párrafos: etiqueta <p> (paragraph)-->
             <!-- Negritas: strong-->
             <!-- Cursivas: em (énfasis)-->
+        <p>Listos para publicar</p>
         <p>Lorem <strong>ipsum dolor sit amet</strong> consectetur adipisicing elit. Non <em>reiciendis in quo corporis</em> rerum eligendi possimus <span>iusto pariatur illo</span>, ea odit? Aperiam dicta inventore harum distinctio corrupti quidem officiis architecto.
         
         <!--Salto de línea: <br> (brake)-->
